# llm_engineering

./: command.md  commands.md  main.py  pyproject.toml  requirementsAnk.txt  requirementsCustom.txt
week1/: day1.ipynb
week1/solutions/: day2 SOLUTION-ank.ipynb  day2 SOLUTION.ipynb
week2/: day1-ank.ipynb  day2-ank.ipynb
week3/: Week_3_Day_4_models.ipynb  Week_3_Day_5_Meeting_Minutes_product.ipynb  day_2_pipelines.ipynb  week_3_day_2_pipelines-ank.ipynb
week7/: Week_7_Day_2_base_model_evaluation.ipynb  Week_7_Day_3_TRAINING.ipynb  Week_7_Day_5_Testing_our_Fine_tuned_model.ipynb
