[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "anthropic>=0.51.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.6.3",
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "feedparser>=6.0.11",
    "gensim>=4.3.2",
    "google-generativeai>=0.8.5",
    "gradio>=5.29.0",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.4.2",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.3",
    "modal>=0.77.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "setuptools>=80.4.0",
    "speedtest-cli>=2.1.3",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "unstructured>=0.17.2",
]
