[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "anthropic>=0.52.2",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "faiss-cpu>=1.11.0",
    "feedparser>=6.0.11",
    "gensim>=4.3.2",
    "google-generativeai>=0.8.5",
    "gradio>=5.32.0",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.19",
    "matplotlib>=3.10.3",
    "modal>=1.0.2",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "speedtest-cli>=2.1.3",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "unstructured>=0.17.2",
]
